Changelog
=========

1.2.dev0 - (unreleased)
-----------------------

1.1 - (2015-07-06)
------------------
* Bug fix: Added hard dependency to amqplib in order to fix GELFRabbitHandler
  [voineali refs #21610]

1.0 - (2015-05-05)
------------------
* Initial release
  [voineali]
